Changes from jTDS 1.1
=======================

07/04/2005 - Alin Sinpalean
 o Corrected some compilation issues with Java 1.3.

07/01/2005 - Alin Sinpalean
 o Applied yet another patch for bug [1229636] Memory Leak in Prepared
   Statements, with a minor change. This seems to finally fix the caching and
   memory leaks; handles are always cached, even if maxStatements=0, retrieved
   from the connection cache and the statement list of handles is implemented
   by a Set, to make sure no memory leaks due to duplicates occur.

06/30/2005 - Alin Sinpalean
 o Corrected bug [1229636] Memory Leak in Prepared Statements, based on Mike's
   initial patch.
 o Realized that my initial fix will not work with maxStatements=0 (as opposed
   to Mike's) so made some more changes.

06/29/2005 - Alin Sinpalean
 o Corrected a bug with prepare handles caching where the usage count was
   decremented twice when a statement was closed, causing premature release of
   handles.

06/28/2005 - Alin Sinpalean
 o Applied Mike's additional patch for bug [1222199] Delayed exception thrown
   in statement close. "Execution cancelled" exceptions are now only thrown if
   the cancel was caused by a call to Statement.cancel(); if a timeout is the
   cause, the exception is masked as an exception was already thrown when the
   execution timed out.
 o Corrected a memory leak caused by the prepared statement's handles
   collection being implemented through an ArrayList rather than a Set. The
   same handle would be added again and again on each execution and never
   removed until the statement was closed.

06/27/2005 - Alin Sinpalean
 o Per Mike's suggestion, changed the SQLState of query cancelled exceptions to
   HY008 instead of S1008.

06/23/2005 - Alin Sinpalean
 o Corrected bug [1226210] {fn dayofweek()} depends on the language. Fix
   submitted by Xavier Poinsard.

06/22/2005 - Alin Sinpalean
 o Corrected bug [1222199] Delayed exception thrown in statement close. In the